--- a/css/creative.css
+++ b/css/creative.css
@@ -10,10 +10,10 @@ body {
   width: 100%;
 }
 body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Special Elite', cursive;
 }
 hr {
-  border-color: #f05f40;
+  border-color: #000000;
   border-width: 3px;
   max-width: 50px;
 }
@@ -36,7 +36,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Special Elite', cursive;
 }
 p {
   font-size: 16px;
@@ -65,14 +65,14 @@ aside {
 .navbar-default {
   background-color: white;
   border-color: rgba(34, 34, 34, 0.05);
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Special Elite', cursive;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
   color: #f05f40;
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Special Elite', cursive;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -106,7 +106,7 @@ aside {
     border-color: rgba(255, 255, 255, 0.3);
   }
   .navbar-default .navbar-header .navbar-brand {
-    color: rgba(255, 255, 255, 0.7);
+    color: black;
   }
   .navbar-default .navbar-header .navbar-brand:hover,
   .navbar-default .navbar-header .navbar-brand:focus {
@@ -150,9 +150,9 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/header.jpg');
+  background-image: url('../img/balcony.png');
   text-align: center;
-  color: white;
+  color: #000000;
 }
 header .header-content {
   position: relative;
@@ -171,7 +171,7 @@ header .header-content .header-content-inner hr {
 }
 header .header-content .header-content-inner p {
   font-weight: 300;
-  color: rgba(255, 255, 255, 0.7);
+  color:#000000;
   font-size: 16px;
   margin-bottom: 50px;
 }
